# Tenebrium

./: CHANGELOG.md  Cargo.toml  README.md  STATUS.md  genesis-mined.json  utxo-after.jsonl
.github/: copilot-instructions.md  repository_settings.json
.github/prompts/: Tenebrium.prompt.md
.github/workflows/: ci.yml  create-rfc-pr.yml  delete-branches.yml  release.yml
ai_backups/crates/tenebrium-utxo/: Cargo.toml.bak  lib.rs.bak  lib.rs.bak2  lib.rs.bak3
crates/tenebrium-cli/: Cargo.toml
crates/tenebrium-cli/src/: main.rs
crates/tenebrium-consensus/: Cargo.toml
crates/tenebrium-consensus/src/: lib.rs
crates/tenebrium-core/: Cargo.toml
crates/tenebrium-core/examples/: generate_wallet_vectors.rs
crates/tenebrium-core/src/: lib.rs  wallet.rs
crates/tenebrium-utxo/: CANONICAL_TXID_V2.md  Cargo.toml
crates/tenebrium-utxo/examples/: export_vectors_cross_language.rs  generate_vectors.rs
crates/tenebrium-utxo/src/: lib.rs  reindex.rs
crates/tenebrium-utxo/test_vectors/: README.md  vectors.json  vectors_cross_language.json
crates/tenebriumd/: Cargo.toml
crates/tenebriumd/src/: block_template.rs  lib.rs  main.rs  mempool.rs  p2p.rs  utxo_db.rs
docs/: BRANCH_DELETION_GUIDE.md
docs/consensus/: params.md
docs/operations/: db-backup-restore.md  p2p.md  seeds.txt
docs/ops/: operations.md
docs/protocol/: p2p.md
docs/release/: checksums.md  mainnet-checklist.md  release-notes-template.md  release-process.md  roadmap.md
docs/rfcs/: 0001-canonical-txid-v2.md  0002-utxo-reindex.md  0003-wallet-file-format.md  0004-genesis.md
docs/security/: audit-checklist.md  fuzz-report-2026-02-01.md  fuzz-report-template.md  fuzzing.md
docs/storage/: db-schema.md
docs/tx/: tx-format.md
docs/wallet/: wallet-file-format.md  wallet-vectors.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_json.rs  header_json.rs  p2p_message_json.rs  tx_json.rs  tx_json_strict.rs  utxo_kv.rs
tools/: README-verify-vectors.md  README.md  build_release.ps1  create_release_tag.ps1  delete-branches.sh  export_vectors_cross_language.py  generate_release_notes.ps1  verify_vectors.py
