[package]
name = "tenebrium-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tenebrium-core = { path = "../tenebrium-core" }
tenebrium-utxo = { path = "../tenebrium-utxo" }
thiserror = "1.0"