[package]
name = "tenebrium-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
bech32 = "0.9"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"