[package]
name = "tenebriumd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tenebrium-utxo = { path = "../tenebrium-utxo" }
tenebrium-consensus = { path = "../tenebrium-consensus" }
sled = "0.34"

[lib]
name = "tenebriumd"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10"